[package]
name = "ax"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12.4",features = ["json","stream"]}
serde = {version = "1.0.202",features = ["derive"]}
serde_json = "1.0.117"
tokio = {version="1.37.0",features = ["full"]}
thiserror = "1.0.61"
toml = "0.8.13"
futures = "0.3"